--- a/views/userPage.html
+++ b/views/userPage.html
@@ -16,6 +16,7 @@
                 <h2>Редактировать данные</h2>
                 <button>Показать</button>
                 <form method="post">
+                    <h2>Идентификатор: %d</h2>
                     <div>
                         <label for="surname">Фамилия</label>
                         <input type="text" name="surname" id="surname" value="%s">
