--- a/views/index.css
+++ b/views/index.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    list-style-type: none;
+    /* list-style-type: none; */
     text-decoration: none;
     font-family: 'TT Interfaces', sans-serif;
     font-weight: normal;
