Добавлены проверки при изменении/добавлении данных продуктов

--- a/views/adminProducts.html
+++ b/views/adminProducts.html
@@ -22,7 +22,7 @@
                 <input type="number" name="id" id="id" value="%s">
                 <input type="submit" name="submitId" value="Подтвердить">
                 <label for="type">Тип
-                    <ol>
+                    <ol start="0">
                         <li>Журнал</li>
                         <li>Комикс</li>
                     </ol>
@@ -43,7 +43,7 @@
                 <label for="publicationDate">Дата выхода</label>
                 <input type="date" name="publicationDate" id="publicationDate" value="%s">
                 <label for="rating">Возрастное ограничение
-                    <ol>
+                    <ol start="0">
                         <li>0+</li>
                         <li>6+</li>
                         <li>12+</li>
