Добавлено скрытие продукта от покупателя

--- a/views/addProduct.html
+++ b/views/addProduct.html
@@ -74,6 +74,8 @@
                 <input type="file" name="image" id="image">
                 <label for="file">Файл с продуктом</label>
                 <input type="file" name="file" id="file">
+                <label for="hidden">Продукт скрыт от покупателей</label>
+                <input type="checkbox" name="hidden" id="hidden">
                 <input type="submit" value="Добавить">
             </form>
         </div>
