--- a/views/adminProducts.html
+++ b/views/adminProducts.html
@@ -77,6 +77,8 @@
                 <input type="file" name="image" id="image">
                 <label for="file">Файл с продуктом</label>
                 <input type="file" name="file" id="file">
+                <label for="hidden">Продукт скрыт от покупателей</label>
+                <input type="checkbox" name="hidden" id="hidden" %s>
                 <input type="submit" name="submitProduct" value="Обновить">
             </form>
         </div>
