Добавлен readonly к подтверждению пароля

--- a/views/userPage.html
+++ b/views/userPage.html
@@ -39,7 +39,8 @@
                         <input type="password" name="password" id="password" readonly
                             onfocus="this.removeAttribute('readonly')">
                         <label for="passwordConfirm">Подтверждение пароля</label>
-                        <input type="password" name="passwordConfirm" id="passwordConfirm">
+                        <input type="password" name="passwordConfirm" id="passwordConfirm" readonly
+                            onfocus="this.removeAttribute('readonly')">
                     </div>
                     <input type="submit" value="Обновить">
                 </form>
