Добавлены проверки в html, удалены ненужные файлы

--- a/views/adminProducts.html
+++ b/views/adminProducts.html
@@ -53,9 +53,9 @@
                 </label>
                 <input type="number" name="rating" id="rating" value="%s">
                 <label for="price1">Цена в рублях</label>
-                <input type="number" name="price1" id="price1" value="%s">
+                <input type="number" name="price1" id="price1" min="0" max="9999999999" step="1" value="%s">
                 <label for="price2">Цена в копейках</label>
-                <input type="number" name="price2" id="price2" value="%s">
+                <input type="number" name="price2" id="price2" min="0" max="99" step="1" value="%s">
                 <label for="description">Краткое описание</label>
                 <input type="text" name="description" id="description" value="%s">
                 <label for="language">Язык</label>
