--- a/views/userPage.html
+++ b/views/userPage.html
@@ -29,7 +29,7 @@
                     <input type="email" name="email" id="email" value="%s">
                     <label for="birthday">Дата рождения</label>
                     <input type="date" name="birthday" id="birthday" value="%s">
-                    <label for="phoneNumber">Номер телефона</label>
+                    <label for="phoneNumber">Номер телефона (без +7 и без 8 в начале)</label>
                     <input type="number" name="phoneNumber" id="phoneNumber" min="0" max="999999999999999" value="%s">
                     <div>
                         <label for="login">Логин</label>
