--- a/views/addProduct.html
+++ b/views/addProduct.html
@@ -30,19 +30,19 @@
                     <option value="1">Комикс</option>
                 </select>
                 <label for="pageCount">Количество страниц</label>
-                <input type="number" name="pageCount" id="pageCount">
+                <input type="number" name="pageCount" id="pageCount" required>
                 <label for="publisher">Издатель</label>
-                <input type="text" name="publisher" id="publisher">
+                <input type="text" name="publisher" id="publisher" required>
                 <label for="titleRussian">Название на русском языке</label>
-                <input type="text" name="titleRussian" id="titleRussian">
+                <input type="text" name="titleRussian" id="titleRussian" required>
                 <label for="titleOriginal">Название на оригинальном языке</label>
-                <input type="text" name="titleOriginal" id="titleOriginal">
+                <input type="text" name="titleOriginal" id="titleOriginal" required>
                 <label for="author">Автор(ы)</label>
-                <input type="text" name="author" id="author">
+                <input type="text" name="author" id="author" required>
                 <label for="artist">Художник(и)</label>
-                <input type="text" name="artist" id="artist">
+                <input type="text" name="artist" id="artist" required>
                 <label for="publicationDate">Дата выхода</label>
-                <input type="date" name="publicationDate" id="publicationDate">
+                <input type="date" name="publicationDate" id="publicationDate" required>
                 <label for="rating">Возрастное ограничение</label>
                 <select name="rating" id="rating">
                     <option value="0">0+</option>
@@ -52,13 +52,13 @@
                     <option value="4">18+</option>
                 </select>
                 <label for="price1">Цена в рублях</label>
-                <input type="number" name="price1" id="price1">
+                <input type="number" name="price1" id="price1" min="0" max="9999999999" step="1" required>
                 <label for="price2">Цена в копейках</label>
-                <input type="number" name="price2" id="price2">
+                <input type="number" name="price2" id="price2" min="0" max="99" step="1" required>
                 <label for="description">Краткое описание</label>
-                <input type="text" name="description" id="description">
+                <input type="text" name="description" id="description" required>
                 <label for="language">Язык</label>
-                <input type="text" name="language" id="language">
+                <input type="text" name="language" id="language" required>
                 <label for="category">Категория</label>
                 <select name="category" id="category">
                     <option value="Фантастика">Фантастика</option>
@@ -71,9 +71,9 @@
                     <option value="Наука">Наука</option>
                 </select>
                 <label for="image">Изображение</label>
-                <input type="file" name="image" id="image">
+                <input type="file" name="image" id="image" required>
                 <label for="file">Файл с продуктом</label>
-                <input type="file" name="file" id="file">
+                <input type="file" name="file" id="file" required>
                 <label for="hidden">Продукт скрыт от покупателей</label>
                 <input type="checkbox" name="hidden" id="hidden">
                 <input type="submit" value="Добавить">
