--- a/views/login.html
+++ b/views/login.html
@@ -20,9 +20,9 @@
         <div class="pageWrap">
             <form method="post">
                 <label for="login">Логин</label>
-                <input type="text" name="login" id="login">
+                <input type="text" name="login" id="login" required>
                 <label for="password">Пароль</label>
-                <input type="password" name="password" id="password">
+                <input type="password" name="password" id="password" required>
                 <input type="submit" value="Войти">
             </form>
         </div>
