--- a/views/register.html
+++ b/views/register.html
@@ -20,23 +20,23 @@
         <div class="pageWrap">
             <form method="post">
                 <label for="surname">Фамилия</label>
-                <input type="text" name="surname" id="surname">
+                <input type="text" name="surname" id="surname" required>
                 <label for="name">Имя</label>
-                <input type="text" name="name" id="name">
+                <input type="text" name="name" id="name" required>
                 <label for="patronymic">Отчество</label>
-                <input type="text" name="patronymic" id="patronymic">
+                <input type="text" name="patronymic" id="patronymic" required>
                 <label for="email">E-mail</label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" required>
                 <label for="birthday">Дата рождения</label>
-                <input type="date" name="birthday" id="birthday">
-                <label for="phoneNumber">Номер телефона</label>
-                <input type="number" name="phoneNumber" id="phoneNumber" min="0" max="999999999999999">
+                <input type="date" name="birthday" id="birthday" required>
+                <label for="phoneNumber">Номер телефона (без +7 и без 8 в начале)</label>
+                <input type="number" name="phoneNumber" id="phoneNumber" min="0" max="999999999999999" required>
                 <label for="login">Логин</label>
-                <input type="text" name="login" id="login">
+                <input type="text" name="login" id="login" required>
                 <label for="password">Пароль</label>
-                <input type="password" name="password" id="password">
+                <input type="password" name="password" id="password" required>
                 <label for="passwordConfirm">Подтверждение пароля</label>
-                <input type="password" name="passwordConfirm" id="passwordConfirm">
+                <input type="password" name="passwordConfirm" id="passwordConfirm" required>
                 <input type="submit" value="Зарегистрироваться">
             </form>
         </div>
