--- a/views/register.html
+++ b/views/register.html
@@ -29,7 +29,7 @@
                 <input type="email" name="email" id="email" required>
                 <label for="birthday">Дата рождения</label>
                 <input type="date" name="birthday" id="birthday" required>
-                <label for="phoneNumber">Номер телефона (без +7 и без 8 в начале)</label>
+                <label for="phoneNumber">Номер телефона</label>
                 <input type="number" name="phoneNumber" id="phoneNumber" min="0" max="999999999999999" required>
                 <label for="login">Логин</label>
                 <input type="text" name="login" id="login" required>
