--- a/views/product2.html
+++ b/views/product2.html
@@ -1,5 +1,7 @@
 <div class="product">
-    <img class="image" src="%s"> <!-- a1 -->
+    <div class="imageWrap">
+        <img class="image" src="%s"> <!-- a1 -->
+    </div>
     <div class="infoWrap">
         <div class="title">%s</div> <!-- a3 -->
         <img class="rating" src="%s"> <br>
