--- a/views/productInfo.css
+++ b/views/productInfo.css
@@ -1,4 +1,9 @@
 .product {
-    padding: 20px;
+    /* padding: 20px; */
     margin: 20px;
+    padding-bottom: 20px;
+}
+
+.imageWrap, .info, a {
+    padding: 20px;
 }
