--- a/views/productInfo.html
+++ b/views/productInfo.html
@@ -15,7 +15,9 @@
             %s
         </div>
         <div class="product">
-            <img class="image" src="%s"> <!-- a1 -->
+            <div class="imageWrap">
+                <img class="image" src="%s"> <!-- a1 -->
+            </div>
             <div class="info">
                 Тип: %s <br> <!-- a2 -->
                 Количество страниц: %d <br> <!-- a3 -->
