* Добавлены дата выхода и категория продукта в product.html, productInfo.html * Исправлен баг с просмотром скрытого продукта у администратора

--- a/views/productInfo.html
+++ b/views/productInfo.html
@@ -31,6 +31,7 @@
                 Цена: %d,%d ₽ <br> <!-- a11,a12 -->
                 Краткое Описание: %s <br> <!-- a13 -->
                 Язык: %s<br> <!-- a14 -->
+                Категория: %s <br>
             </div>
             <a class="cartAdd" href="%s">Добавить в корзину</a> <!-- a15 -->
         </div>
