--- a/views/product.html
+++ b/views/product.html
@@ -5,6 +5,8 @@
     <div class="infoWrap">
         <div class="title">%s</div> <!-- a3 -->
         <img class="rating" src="%s">
+        <div class="publicationDate">%s</div>
+        <div class="category">%s</div>
         <div class="price">%d,%d ₽</div> <!-- a4,a5 -->
         <a class="%s" href="%s">%s</a> <!-- a6,a7,a8 -->
         <a class="productInfo" href="%s">Подробнее</a> <!-- a9 -->
