* Исправлено название категории * Улучшен ввод номера страницы

--- a/views/categories.html
+++ b/views/categories.html
@@ -13,7 +13,7 @@
         <div class="categories">
             <a href="?category=Бизнес">Бизнес</a>
             <a href="?category=Электроника">Электроника</a>
-            <a href="?category='Путешествие и туризм'">Путешествие и туризм</a>
+            <a href="?category=Путешествие и туризм">Путешествие и туризм</a>
             <a href="?category=Наука">Наука</a>
         </div>
     </div>
