* Исправлен баг с обновление пароля * Изменён вид message.html

--- a/views/message.html
+++ b/views/message.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>%s</h1>
-    <p>Перенаправление на главную страницу через 5 секунд...</p>
+    <p>Перенаправление на главную страницу через %d секунд...</p>
 </body>
 
 </html>
