--- a/views/register.html
+++ b/views/register.html
@@ -24,7 +24,7 @@
                 <label for="name">Имя</label>
                 <input type="text" name="name" id="name" required>
                 <label for="patronymic">Отчество</label>
-                <input type="text" name="patronymic" id="patronymic" required>
+                <input type="text" name="patronymic" id="patronymic">
                 <label for="email">E-mail</label>
                 <input type="email" name="email" id="email" required>
                 <label for="birthday">Дата рождения</label>
