--- a/views/adminProducts.html
+++ b/views/adminProducts.html
@@ -21,12 +21,6 @@
                 <label for="id">Идентификатор</label>
                 <input type="number" name="id" id="id" value="%s">
                 <input type="submit" name="submitId" value="Подтвердить">
-                <label for="type">Тип
-                    <ol start="0">
-                        <li>Журнал</li>
-                        <li>Комикс</li>
-                    </ol>
-                </label>
                 <input type="number" name="type" id="type" value="%s">
                 <label for="pageCount">Количество страниц</label>
                 <input type="number" name="pageCount" id="pageCount" value="%s">
@@ -42,16 +36,14 @@
                 <input type="text" name="artist" id="artist" value="%s">
                 <label for="publicationDate">Дата выхода</label>
                 <input type="date" name="publicationDate" id="publicationDate" value="%s">
-                <label for="rating">Возрастное ограничение
-                    <ol start="0">
-                        <li>0+</li>
-                        <li>6+</li>
-                        <li>12+</li>
-                        <li>16+</li>
-                        <li>18+</li>
-                    </ol>
-                </label>
-                <input type="number" name="rating" id="rating" value="%s">
+                <label for="rating">Возрастное ограничение</label>
+                <select name="rating" id="rating" data-value="%s">
+                    <option value="0">0+</option>
+                    <option value="1">6+</option>
+                    <option value="2">12+</option>
+                    <option value="3">16+</option>
+                    <option value="4">18+</option>
+                </select>
                 <label for="price1">Цена в рублях</label>
                 <input type="number" name="price1" id="price1" min="0" max="9999999999" step="1" value="%s">
                 <label for="price2">Цена в копейках</label>
@@ -60,19 +52,21 @@
                 <input type="text" name="description" id="description" value="%s">
                 <label for="language">Язык</label>
                 <input type="text" name="language" id="language" value="%s">
-                <label for="category">Категория (одна из следующих)
-                    <ul>
-                        <li>Фантастика</li>
-                        <li>Боевик</li>
-                        <li>Драма</li>
-                        <li>Супергерои</li>
-                        <li>Бизнес</li>
-                        <li>Электроника</li>
-                        <li>Путешествие и туризм</li>
-                        <li>Наука</li>
-                    </ul>
-                </label>
-                <input type="text" name="category" id="category" value="%s">
+                <label for="category">Категория</label>
+                <select name="category" id="category" data-value="%s">
+                    <optgroup label="Журналы">
+                        <option value="Бизнес">Бизнес</option>
+                        <option value="Электроника">Электроника</option>
+                        <option value="Путешествие и туризм">Путешествие и туризм</option>
+                        <option value="Наука">Наука</option>
+                    </optgroup>
+                    <optgroup label="Комиксы">
+                        <option value="Фантастика">Фантастика</option>
+                        <option value="Боевик">Боевик</option>
+                        <option value="Драма">Драма</option>
+                        <option value="Супергерои">Супергерои</option>
+                    </optgroup>
+                </select>
                 <label for="image">Изображение</label>
                 <input type="file" name="image" id="image">
                 <label for="file">Файл с продуктом</label>
@@ -84,6 +78,7 @@
         </div>
         <div class="footer"></div>
     </div>
+    <script src="/views/adminProducts.js"></script>
 </body>
 
 </html>
